deze runnen jasper

--- a/Final Assignment EPA1361/2_FULL_SPACE_OPEN_EXPLORATION.ipynb
+++ b/Final Assignment EPA1361/2_FULL_SPACE_OPEN_EXPLORATION.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "# running the model through EMA workbench\n",
     "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
-    "    results = evaluator.perform_experiments(scenarios=5, policies=100)\n",
+    "    results = evaluator.perform_experiments(scenarios=500, policies=100, uncertainty_sampling=Samplers.LHS)\n",
     "\n",
     "utilities.save_results(results,r'generated_datasets\\Open_exploration_500s_100p.csv')"
    ],
@@ -133,6 +133,16 @@
      "end_time": "2023-06-08T12:37:32.763237Z",
      "start_time": "2023-06-08T12:37:32.700501300Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Visualizations\n",
+    "- histograms, means"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
