--- a/Final Assignment EPA1361/2_MORO_ANALYSIS.ipynb
+++ b/Final Assignment EPA1361/2_MORO_ANALYSIS.ipynb
@@ -104,10 +104,7 @@
    "execution_count": 27,
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(r'generated_datasets\\open_exploration_base_policy_worst_scenarios.pkl')\n",
-    "df.insert(0, 'name', df.index)\n",
-    "\n",
-    "dike_model.uncertainties = parameters_from_csv(df.iloc[:,:17])"
+    "df = pd.read_pickle(r'generated_datasets\\open_exploration_base_policy_worst_scenarios.pkl')"
    ],
    "metadata": {
     "collapsed": false,
