comment voor toekomstige jasper

--- a/Final Assignment EPA1361/MOEA_seeds.ipynb
+++ b/Final Assignment EPA1361/MOEA_seeds.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-13T14:52:13.019560400Z",
-     "start_time": "2023-06-13T14:52:13.015255200Z"
+     "end_time": "2023-06-13T15:58:26.024718900Z",
+     "start_time": "2023-06-13T15:58:22.947526500Z"
     }
    },
    "outputs": [],
@@ -41,16 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-13T15:59:42.099170100Z",
+     "start_time": "2023-06-13T15:59:42.090169800Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "ema_logging.log_to_stderr(ema_logging.INFO)\n",
@@ -71,14 +75,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T14:52:13.702562600Z",
-     "start_time": "2023-06-13T14:52:13.536927300Z"
+     "end_time": "2023-06-13T15:59:44.252714700Z",
+     "start_time": "2023-06-13T15:59:43.137025100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from ema_workbench.em_framework.optimization import (ArchiveLogger,\n",
@@ -105,79 +109,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T14:59:01.505989800Z",
-     "start_time": "2023-06-13T14:59:01.499691Z"
+     "end_time": "2023-06-13T15:59:45.288826400Z",
+     "start_time": "2023-06-13T15:59:45.272951600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:09, 10.56it/s]                                                       \u001B[A\u001B[A\n",
-      "[MainProcess/INFO] optimization completed, found 61 solutions\n",
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:09, 10.22it/s]                                                       \u001B[A\u001B[A\n",
-      "[MainProcess/INFO] optimization completed, found 72 solutions\n",
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:10,  9.29it/s]                                                       \u001B[A\u001B[A\n",
-      "[MainProcess/INFO] optimization completed, found 55 solutions\n",
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:10,  9.83it/s]                                                       \u001B[A\u001B[A\n",
+      "[MainProcess/INFO] pool started with 12 workers\n",
+      "100it [00:09, 10.78it/s]                                                       \n",
       "[MainProcess/INFO] optimization completed, found 59 solutions\n",
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:10,  9.66it/s]                                                       \u001B[A\u001B[A\n",
-      "[MainProcess/INFO] optimization completed, found 76 solutions\n",
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:10,  9.58it/s]                                                       \u001B[A\u001B[A\n",
-      "[MainProcess/INFO] optimization completed, found 69 solutions\n",
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:09, 10.00it/s]                                                       \u001B[A\u001B[A\n",
-      "[MainProcess/INFO] optimization completed, found 66 solutions\n",
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:10,  9.64it/s]                                                       \u001B[A\u001B[A\n",
-      "[MainProcess/INFO] optimization completed, found 62 solutions\n",
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:10,  9.39it/s]                                                       \u001B[A\u001B[A\n",
-      "[MainProcess/INFO] optimization completed, found 65 solutions\n",
-      "\n",
-      "\n",
-      "  0%|                                                   | 0/50 [00:00<?, ?it/s]\u001B[A\u001B[A\n",
-      "\n",
-      "100it [00:10,  9.58it/s]                                                       \u001B[A\u001B[A\n",
-      "[MainProcess/INFO] optimization completed, found 55 solutions\n"
+      "100it [00:09, 10.78it/s]                                                       \n",
+      "[MainProcess/INFO] optimization completed, found 58 solutions\n",
+      "[MainProcess/INFO] terminating pool\n"
      ]
     }
    ],
@@ -200,27 +150,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:01:21.761833700Z",
-     "start_time": "2023-06-13T14:59:05.197274400Z"
+     "end_time": "2023-06-13T16:00:57.944425Z",
+     "start_time": "2023-06-13T15:59:54.553075200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Pandas' object has no attribute '0_RfR 0'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[18], line 5\u001B[0m\n\u001B[0;32m      3\u001B[0m problem \u001B[38;5;241m=\u001B[39m to_problem(dike_model, searchover\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlevers\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      4\u001B[0m epsilons \u001B[38;5;241m=\u001B[39m epsilon\n\u001B[1;32m----> 5\u001B[0m merged_archives \u001B[38;5;241m=\u001B[39m \u001B[43mepsilon_nondominated\u001B[49m\u001B[43m(\u001B[49m\u001B[43mresults\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mepsilons\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mproblem\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\Documents\\TU_Delft\\M_Jaar_1\\Q4\\Model_based_decision_making\\mbd_venv\\Lib\\site-packages\\ema_workbench\\em_framework\\optimization.py:780\u001B[0m, in \u001B[0;36mepsilon_nondominated\u001B[1;34m(results, epsilons, problem)\u001B[0m\n\u001B[0;32m    775\u001B[0m     \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m    776\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mthe number of epsilon values (\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mlen\u001B[39m(epsilons)\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m) must match the number of objectives \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mproblem\u001B[38;5;241m.\u001B[39mnobjs\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    777\u001B[0m     )\n\u001B[0;32m    779\u001B[0m results \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mconcat(results, ignore_index\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m--> 780\u001B[0m solutions \u001B[38;5;241m=\u001B[39m \u001B[43mrebuild_platypus_population\u001B[49m\u001B[43m(\u001B[49m\u001B[43mresults\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mproblem\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    781\u001B[0m archive \u001B[38;5;241m=\u001B[39m EpsilonBoxArchive(epsilons)\n\u001B[0;32m    782\u001B[0m archive \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m solutions\n",
-      "File \u001B[1;32m~\\Documents\\TU_Delft\\M_Jaar_1\\Q4\\Model_based_decision_making\\mbd_venv\\Lib\\site-packages\\ema_workbench\\em_framework\\optimization.py:877\u001B[0m, in \u001B[0;36mrebuild_platypus_population\u001B[1;34m(archive, problem)\u001B[0m\n\u001B[0;32m    875\u001B[0m solutions \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m    876\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m row \u001B[38;5;129;01min\u001B[39;00m archive\u001B[38;5;241m.\u001B[39mitertuples():\n\u001B[1;32m--> 877\u001B[0m     decision_variables \u001B[38;5;241m=\u001B[39m \u001B[43m[\u001B[49m\u001B[38;5;28;43mgetattr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mrow\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mattr\u001B[49m\u001B[43m)\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mfor\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mattr\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;129;43;01min\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mproblem\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mparameter_names\u001B[49m\u001B[43m]\u001B[49m\n\u001B[0;32m    878\u001B[0m     objectives \u001B[38;5;241m=\u001B[39m [\u001B[38;5;28mgetattr\u001B[39m(row, attr) \u001B[38;5;28;01mfor\u001B[39;00m attr \u001B[38;5;129;01min\u001B[39;00m problem\u001B[38;5;241m.\u001B[39moutcome_names]\n\u001B[0;32m    880\u001B[0m     solution \u001B[38;5;241m=\u001B[39m Solution(problem)\n",
-      "File \u001B[1;32m~\\Documents\\TU_Delft\\M_Jaar_1\\Q4\\Model_based_decision_making\\mbd_venv\\Lib\\site-packages\\ema_workbench\\em_framework\\optimization.py:877\u001B[0m, in \u001B[0;36m<listcomp>\u001B[1;34m(.0)\u001B[0m\n\u001B[0;32m    875\u001B[0m solutions \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m    876\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m row \u001B[38;5;129;01min\u001B[39;00m archive\u001B[38;5;241m.\u001B[39mitertuples():\n\u001B[1;32m--> 877\u001B[0m     decision_variables \u001B[38;5;241m=\u001B[39m [\u001B[38;5;28;43mgetattr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mrow\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mattr\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mfor\u001B[39;00m attr \u001B[38;5;129;01min\u001B[39;00m problem\u001B[38;5;241m.\u001B[39mparameter_names]\n\u001B[0;32m    878\u001B[0m     objectives \u001B[38;5;241m=\u001B[39m [\u001B[38;5;28mgetattr\u001B[39m(row, attr) \u001B[38;5;28;01mfor\u001B[39;00m attr \u001B[38;5;129;01min\u001B[39;00m problem\u001B[38;5;241m.\u001B[39moutcome_names]\n\u001B[0;32m    880\u001B[0m     solution \u001B[38;5;241m=\u001B[39m Solution(problem)\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'Pandas' object has no attribute '0_RfR 0'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1000.0, 1000.0, 1000.0, 1000.0, 1000.0, 1000.0, 1000.0, 1000.0, 1000.0, 1000.0, 1000.0, 1000.0]\n",
+      "<ema_workbench.em_framework.optimization.Problem object at 0x00000148248AC810>\n"
      ]
     }
    ],
@@ -229,13 +173,14 @@
     "\n",
     "problem = to_problem(dike_model, searchover=\"levers\")\n",
     "epsilons = epsilon\n",
+    "#het ligt hier aan, ff nagaan wat epsilon_nondominated doet toekomstige jasper\n",
     "merged_archives = epsilon_nondominated(results, epsilons, problem)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-13T15:06:30.846288700Z",
-     "start_time": "2023-06-13T15:06:30.806149100Z"
+     "end_time": "2023-06-13T16:02:28.382532700Z",
+     "start_time": "2023-06-13T16:02:28.371798900Z"
     }
    }
   },
